fix: App detail page userId transfer name
* fix: Pages time format show

* fix: Modal footer button style

--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -39,7 +39,7 @@ $padding-left: 24px;
   .footer {
     padding: 32px $padding-left;
     //border-top: 1px solid $N10;
-    //text-align: right;
+    text-align: right;
     .operationBtn{
       margin-left: 192px;
       text-align: left;
