--- a/src/pages/Dashboard/Reviews/Detail/index.scss
+++ b/src/pages/Dashboard/Reviews/Detail/index.scss
@@ -193,6 +193,15 @@
       float: right;
     }
   }
+
+  .operator {
+    @include note-font;
+
+    .name {
+      color: $N500;
+      font-weight: 500;
+    }
+  }
 }
 
 .rejectMessage {
