--- a/src/pages/Dashboard/Users/index.scss
+++ b/src/pages/Dashboard/Users/index.scss
@@ -108,3 +108,13 @@
     width: 50%;
   }
 }
+
+.formContent {
+  .operationBtn {
+    margin-left: 192px;
+
+    button {
+      margin-right: 12px;
+    }
+  }
+}
