--- a/src/pages/Dashboard/Apps/Audits/index.scss
+++ b/src/pages/Dashboard/Apps/Audits/index.scss
@@ -77,10 +77,11 @@
   }
 
   .status {
-    width: 20%;
+    width: 18%;
   }
 
   .operator {
+    margin-right: 2%;
     width: 20%;
     color: $N300;
   }
