--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -54,31 +54,31 @@ $padding-left: 24px;
 
   }
 
-  form {
-    & > div {
-      margin-bottom: 24px;
-
-      & > label {
-        display: inline-block;
-        float: left;
-        margin-right:  24px;
-        width: 168px;
-        line-height: 32px;
-        font-size: 14px;
-        font-weight: 500;
-        text-align: right;
-        color: $N500;
-      }
-
-      & > input {
-        width: 256px;
-      }
-
-      & > select {
-        width: 256px;
-      }
-    }
-  }
+  //form {
+  //  & > div {
+  //    margin-bottom: 24px;
+  //
+  //    & > label {
+  //      display: inline-block;
+  //      float: left;
+  //      margin-right:  24px;
+  //      width: 168px;
+  //      line-height: 32px;
+  //      font-size: 14px;
+  //      font-weight: 500;
+  //      text-align: right;
+  //      color: $N500;
+  //    }
+  //
+  //    & > input {
+  //      width: 256px;
+  //    }
+  //
+  //    & > select {
+  //      width: 256px;
+  //    }
+  //  }
+  //}
 }
 
 
