--- a/src/pages/Dashboard/Users/index.scss
+++ b/src/pages/Dashboard/Users/index.scss
@@ -118,3 +118,29 @@
     }
   }
 }
+
+.createForm {
+  & > div {
+    margin-bottom: 24px;
+
+    & > label {
+      display: inline-block;
+      float: left;
+      margin-right:  24px;
+      width: 168px;
+      line-height: 32px;
+      font-size: 14px;
+      font-weight: 500;
+      text-align: right;
+      color: $N500;
+    }
+
+    & > input {
+      width: 256px;
+    }
+
+    & > select {
+      width: 256px;
+    }
+  }
+}
