feat: Instances and purchased pages for user

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -190,6 +190,11 @@ $profile-hover-color: #efe6f8;
 
     .icon {
       margin: 7px;
+
+      svg {
+        --primary-color: #{$N0};
+        --secondary-color: #{$Y200};
+      }
     }
   }
 
