--- a/src/components/Base/Button/index.scss
+++ b/src/components/Base/Button/index.scss
@@ -14,7 +14,8 @@
   :global {
     .icon {
       float: left;
-      margin-top: -2px;
+      // margin-top: -2px;
+      margin-right: 4px;
       vertical-align: baseline;
     }
   }
