--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -59,6 +59,10 @@
   .wrapper {
     width: $content-width;
     margin: 30px auto;
+
+    .words {
+      display: inline-block;
+    }
   }
 
   .image,
@@ -105,45 +109,33 @@
 
   .search {
     float: right;
-    width: 360px;
-    i {
-      color: $N65;
-    }
-    &:hover {
-      i {
-        color: $P100;
-      }
-    }
+    margin-top: 9px;
+    width: 300px;
+
     input {
-      color: $N500;
       padding-left: 36px;
       border-radius: 16px;
       border: 1px solid transparent;
-      background-color: $N10;
-      transition: all 0.3s ease-in-out;
+      background-color: rgba(255, 255, 255, 0.1);
+      color: $N0;
+
       &::placeholder {
-        font-size: 14px;
-        color: $N45;
-        line-height: 1;
-        letter-spacing: 0;
+        font-size: 12px;
+        color: $N65;
       }
+
       &:focus {
-        border: solid 1px $P75 !important;
+        border-color: $N10;
       }
 
       &:hover {
-        border: solid 1px $N45;
+        border-color: $N65;
       }
     }
-    :global {
-      .icon {
-        color: $N65;
-        opacity: 0.5;
-        &:hover,
-        &:focus {
-          opacity: 1;
-        }
-      }
+
+    svg {
+      --primary-color: #{$N65};
+      --secondary-color: #{$N65};
     }
   }
 }
