--- a/src/pages/AppDetail/Screenshots/index.scss
+++ b/src/pages/AppDetail/Screenshots/index.scss
@@ -1,12 +1,12 @@
-@import "~scss/vars";
+@import '~scss/vars';
 
-.body{
-  margin-left: 64px;
-}
-
-.slider{
+.screenshots {
   position: relative;
-  .pre,.next{
+  margin-bottom: 24px;
+  font-size: 12px;
+
+  .pre,
+  .next {
     position: absolute;
     display: inline-block;
     width: 18px;
@@ -14,65 +14,61 @@
     bottom: 80px;
     cursor: pointer;
   }
-  .pre{
-    //left: 10px;
-  }
-  .next{
+  .next {
     right: 10px;
   }
-  .dotList{
+  .dotList {
     position: absolute;
     bottom: -35px;
     left: 0;
     width: 100%;
     text-align: center;
-    .dot{
+    .dot {
       display: inline-block;
       margin: 0 6px;
-      width: 6px;
+      width: 44px;
       height: 6px;
       border-radius: 3px;
       background-color: $grey;
       cursor: pointer;
     }
-    .active{
-      width: 44px;
+    .active {
       background-color: $P75;
     }
   }
-  .listOuter{
+  .listOuter {
     position: relative;
-    margin: 40px 40px 70px;
+    margin: 40px 36px 70px;
     height: 220px;
     overflow: hidden;
-    .pictureList{
+
+    .pictureList {
       position: absolute;
       left: 0;
-      bottom:0;
+      bottom: 0;
       width: 1200px;
     }
   }
-  .pictureOuter{
-    float: left;
-    width: 270px;
-    height: 213px;
-    background-color: #eff0f5;
-    margin-right: 6px;
 
-    .picture{
-      margin: 20px 25px;
-      width: 220px;
-      height: 170px;
-      border-radius: 3px;
+  .pictureOuter {
+    float: left;
+    width: 260px;
+    height: 200px;
+    background-color: $background-color;
+    margin-right: 12px;
+
+    .picture {
+      margin: 10px;
+      width: 240px;
+      height: 180px;
       box-shadow: 0 2px 10px 1px rgba(20, 8, 32, 0.2);
       background: transparent;
-      //color: red;
       text-align: center;
       line-height: 170px;
       font-size: 30px;
       cursor: pointer;
 
-      img{
+      img {
         display: inline-block;
         width: 100%;
         height: 100%;
@@ -82,15 +78,13 @@
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
+  position: fixed;
+  bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  transform: opacity 0.8s ease-in-out;
-  opacity: 0.95;
+  right: 0;
+  top: 0;
   z-index: 100;
+  background-color: rgba(#000, 0.8);
 
   .viewCont {
     position: relative;
@@ -99,7 +93,6 @@
 
     .overlayPic {
       margin: 0 auto;
-      width: 1000px;
       height: 600px;
     }
 
