--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -109,9 +109,9 @@
   color: $N500;
 }
 
-@mixin normal-font  ($line-height: 28px, $font-size: 14px) {
-  line-height: 20px;
+@mixin normal-font  ($line-height: 20px, $font-size: 12px) {
+  line-height:$line-height;
   font-weight: normal;
-  font-size: 12px;
+  font-size: $font-size;
   color: $N300;
 }
