refactor: Accout page relative url and detailTabs

--- a/src/components/MenuLayer/index.scss
+++ b/src/components/MenuLayer/index.scss
@@ -103,4 +103,11 @@
   .divider {
     @extend %has-bottom;
   }
+
+  .disabled {
+    opacity: 0.5;
+    a {
+      cursor: not-allowed;
+    }
+  }
 }
