--- a/src/scss/partial/_grid.scss
+++ b/src/scss/partial/_grid.scss
@@ -19,6 +19,7 @@ $layout-margin: 156px;
 // basic
 $nav-width: 264px;
 $header-height: 48px;
+$title-banner-height-orig: 240px;
 $title-banner-height: 108px;
 $layout-top: $header-height + $title-banner-height + 40px;
 $tabNavs-height: 48px;
