feat: Add app detail preview
* feat: Add release success dailog

* fix: Query review detail method

--- a/src/pages/Dashboard/Versions/Detail/index.scss
+++ b/src/pages/Dashboard/Versions/Detail/index.scss
@@ -255,3 +255,23 @@
     }
   }
 }
+
+.checkInfo {
+  width: 900px;
+  margin: 0 auto;
+}
+
+.releaseContent {
+  padding: 50px 0;
+  text-align: center;
+
+  .title {
+    @include title-font;
+    margin-bottom: 12px;
+  }
+
+  .description {
+    @include note-font;
+    margin-bottom: 16px;
+  }
+}
