--- a/src/pages/Dashboard/Apps/Add/index.scss
+++ b/src/pages/Dashboard/Apps/Add/index.scss
@@ -2,11 +2,15 @@
 
 .createApp {
   background: $background-color;
-  min-width: 744px;
   text-align: center;
   .upload {
     width: 552px;
   }
+}
+
+.uploadConf {
+  width: 744px;
+  margin: 0 auto;
 }
 
 .config {
