--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -9,17 +9,68 @@
   .homeLoad {
     margin-left: $nav-width;
   }
+
+  .navGrp {
+    margin-bottom: 42px;
+  }
+
   .nav {
-    position: absolute;
-    top: 92px;
-    left: 0;
+    position: fixed;
+    top: $header-height + $title-banner-height-orig;
     width: $nav-width;
     height: 100%;
 
     &.fixNav {
-      top: 92px - ($title-banner-height-orig - $title-banner-height);
+      top: $header-height + $title-banner-height;
+    }
+
+    padding-top: 32px;
+
+    .caption {
+      margin-bottom: 14px;
+      line-height: 20px;
+      font-size: $font16;
+      font-weight: bold;
+      color: $N500;
+    }
+
+    .menu {
+      padding: 0;
+      margin-top: $base-margin;
+      &:first-of-type {
+        margin-top: 0;
+      }
+
+      .item {
+        margin-bottom: 12px;
+        height: 20px;
+        line-height: 20px;
+        list-style: none;
+        color: $N400;
+
+        &:hover, &.active {
+          color: $P75;
+          font-weight: bold;
+          cursor: pointer;
+
+          svg {
+            --primary-color: #{$P75};
+            --secondary-color: #{$P75};
+          }
+        }
+
+        .name {
+          display: inline-block;
+          margin-left: 12px;
+        }
+
+        .icon {
+          vertical-align: middle;
+        }
+      }
     }
   }
+
   .apps {
     margin-left: $nav-width;
     padding-left: 24px;
@@ -63,22 +114,15 @@
   }
 }
 
-.fixNav {
-  //div[class*='_nav'] {
-  //  position: fixed;
-  //  top: $header-height;
-  //  left: auto;
-  //  height: $main-height;
-  //}
-
-  div[class*='appList'] {
-    padding-top: $header-height;
-  }
-
-  div[class*='_cateTitle']{
-    padding-top: 72px;
-  }
-}
+//.fixNav {
+//  div[class*='appList'] {
+//    padding-top: $header-height;
+//  }
+//
+//  div[class*='_cateTitle']{
+//    padding-top: 72px;
+//  }
+//}
 
 .banner {
   height: $banner-height;
