fix: Home pathname filter in server api route

--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -114,15 +114,15 @@
   }
 }
 
-//.fixNav {
-//  div[class*='appList'] {
-//    padding-top: $header-height;
-//  }
-//
-//  div[class*='_cateTitle']{
-//    padding-top: 72px;
-//  }
-//}
+.fixNav {
+  div[class*='appList'] {
+    padding-top: $header-height;
+  }
+
+  div[class*='_cateTitle']{
+    padding-top: 72px;
+  }
+}
 
 .banner {
   height: $banner-height;
