--- a/src/components/AppList/index.scss
+++ b/src/components/AppList/index.scss
@@ -1,26 +1,25 @@
 @import '~scss/vars';
 
-
-.appList, .categoryApps {
+.appList {
+  position: relative;
+  margin-top: -10px;
   overflow: hidden;
   _zoom: 1;
+
+  &.fixNav {
+    top: 132px;
+  }
 
   > div {
     &:nth-child(3n+4) {
       margin-right: 0;
     }
   }
-}
 
-.appList {
   .noData {
     padding: 20px 0;
     text-align: center;
     font-size: 12px;
     color: $N75;
   }
-}
-
-.categoryApps {
-  margin-top: -16px;
 }
