--- a/src/components/Card/CardTitle/index.scss
+++ b/src/components/Card/CardTitle/index.scss
@@ -1,7 +1,7 @@
 @import '~scss/vars';
 
 .title{
-  padding: 32px 0 20px 0;
+  padding-bottom: 12px;
   line-height: 1.25;
   font-size: $font16;
   font-weight: bold;
