--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -55,6 +55,30 @@
   width: 100%;
   height: $title-banner-height;
   background-color: $N500;
+  transition: height .3s ease-in-out;
+
+  &.stretch {
+    height: $title-banner-height-orig;
+    .wrapper {
+      margin: 68px auto;
+    }
+    .search {
+      float: none;
+      top: 0;
+    }
+  }
+
+  &.shrink {
+    height: $title-banner-height !important;
+    .wrapper {
+      margin: 30px auto;
+    }
+    .search {
+      transition: all .3s ease-in-out;
+      float: right;
+      top: -15px;
+    }
+  }
 
   .wrapper {
     width: $content-width;
@@ -100,6 +124,7 @@
   }
 
   .description {
+    display: inline-block;
     height: 20px;
     line-height: 20px;
     font-size: 12px;
@@ -108,34 +133,38 @@
   }
 
   .search {
-    float: right;
-    margin-top: 9px;
-    width: 300px;
+    position: relative;
+    width: 303px;
 
     input {
+      color: $N0;
       padding-left: 36px;
       border-radius: 16px;
       border: 1px solid transparent;
       background-color: rgba(255, 255, 255, 0.1);
-      color: $N0;
+      transition: all 0.3s ease-in-out;
 
       &::placeholder {
         font-size: 12px;
         color: $N65;
+        line-height: 1;
+        letter-spacing: 0;
       }
 
-      &:focus {
-        border-color: $N10;
-      }
-
-      &:hover {
-        border-color: $N65;
+      &:focus, &:hover {
+        border: solid 1px $P75;
       }
     }
 
     svg {
-      --primary-color: #{$N65};
-      --secondary-color: #{$N65};
+      --primary-color: #{$N0};
+      --secondary-color: #{$N0};
+      opacity: 0.5;
+
+      &:hover,
+      &:focus {
+        opacity: 1;
+      }
     }
   }
 }
