--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -3,6 +3,7 @@
 .card {
    float: left;
    display: inline-block;
+   position: relative;
    width: $app-card-width;
    height: $app-card-height;
    padding: 40px 20px 20px;
@@ -14,6 +15,7 @@
    text-align: center;
    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
    cursor: pointer;
+   overflow: hidden;
 
   .label {
     font-size: $size-small;
@@ -25,8 +27,14 @@
     }
   }
 
-  .toggleCard{
-    display: none;
+  .toggleCard, .basicCard{
+    position: relative;
+    left: 0;
+    transition: all .3s ease-in-out;
+  }
+
+  .toggleCard {
+    top: -1000px;
   }
 
   // mimic toggle card effect
@@ -37,13 +45,12 @@
       box-shadow: 0 0 8px 0 rgba(119, 133, 146, 0.04), 0 3px 4px 0 rgba(134, 145, 156, 0.04);
 
       .basicCard {
-        display: none;
+        top: -1000px;
       }
 
       .toggleCard {
-        display: block;
+        top: -132px;
         text-align: left;
-        transition: all .3s ease-in-out;
 
         .title {
           .icon {
@@ -67,8 +74,9 @@
             margin-left: 8px;
             font-weight: bold;
             color: $N500;
-            width: auto;
+            width: 170px;
             @include textCut;
+            word-break: break-word;
           }
         }
         .desc{
