feat: Complete missing translations for all pages

--- a/src/pages/Dashboard/Account/index.scss
+++ b/src/pages/Dashboard/Account/index.scss
@@ -17,6 +17,10 @@
       .name {
         width: 120px;
       }
+
+      .submitBtn {
+        padding-left: 142px;
+      }
     }
 
     & > div {
