--- a/src/pages/Dashboard/Apps/Info/index.scss
+++ b/src/pages/Dashboard/Apps/Info/index.scss
@@ -146,7 +146,7 @@
 
 .screenshot {
   margin-left: 270px;
-  width: 466px;
+  width: calc(100% - 270px);
   height: 170px;
   padding: 20px 0 20px 20px;
   border-radius: 2px;
