--- a/src/pages/Dashboard/Providers/CertificateInfo/index.scss
+++ b/src/pages/Dashboard/Providers/CertificateInfo/index.scss
@@ -34,6 +34,16 @@
       margin-bottom: 16px;
     }
   }
+
+  &.enInfo {
+    dt {
+      width: 118px;
+    }
+    dd {
+      margin-left: 138px;
+    }
+
+  }
 }
 
 .blankInfo {
