--- a/src/components/Base/Tree/index.scss
+++ b/src/components/Base/Tree/index.scss
@@ -26,6 +26,14 @@
       margin-left: -24px;
       margin-top: 2px;
     }
+
+    .rc-tree-node-content-wrapper {
+      width: 100%;
+    }
+    .rc-tree-title {
+      display: inline-flex;
+      width: 100%;
+    }
   }
 }
 
