--- a/src/pages/Dashboard/Accounts/index.scss
+++ b/src/pages/Dashboard/Accounts/index.scss
@@ -53,12 +53,32 @@
     box-shadow: none;
     background: transparent;
   }
+  .groupHeader {
+    > span {
+      width: inherit;
+    }
+  }
 
-  .groupTitle {
+  .groupTitleContainer {
     display: inline-flex;
     align-items: center;
-    span:first-child {
-      margin-left: 5px;
+    width: 100%;
+    .groupTitle {
+      flex: 1;
+    }
+    > span:last-child {
+      margin-right: 10px;
+    }
+    .groupPopver {
+      display: none;
+      :global(.icon) {
+        position: static;
+      }
+    }
+    .groupPopverTarget {
+      width: 20px;
+      height: 20px;
+      margin-right: 4px;
     }
   }
   .titleEventIcon {
@@ -67,6 +87,9 @@
   }
   :global(.rc-tree-node-selected) {
     .titleEventIcon {
+      display: inline-flex;
+    }
+    .groupPopver {
       display: inline-flex;
     }
   }
