fix: Category app count
Fix Stepper styles when user is normal

--- a/src/components/Layout/Stepper/index.scss
+++ b/src/components/Layout/Stepper/index.scss
@@ -1,5 +1,11 @@
 @import '~scss/vars';
 
+.stepper {
+  .normalUser {
+    top: $header-height + 5px;
+  }
+}
+
 .headerStep {
   position: fixed;
   top: 0;
