--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -94,38 +94,6 @@
   .pi-table {
     overflow-x: auto;
 
-    &-thead > tr > th {
-      position: relative;
-      padding: 10px 5px;
-      line-height: 12px;
-      font-weight: normal;
-      font-size: 12px;
-      color: $N100;
-      box-shadow: inset 0 -1px 0 0 $N10, inset 0 1px 0 0 $N10;
-      letter-spacing: 0;
-
-      &.actions {
-        text-align: center;
-      }
-
-      &::before {
-        content: '';
-        position: absolute;
-        left: -1px;
-        top: 8px;
-        bottom: 8px;
-        width: 0;
-      }
-
-      label {
-        margin-left: 0 !important;
-      }
-
-      //.pi-popover-popper[data-pacement^="bottom"] {
-      //  transform: translate3d(500px, 236px, 0px) !important;
-      //}
-    }
-
     &-tbody > tr {
       transition: all $transition-speed;
       &:hover {
@@ -148,12 +116,16 @@
           color: $link-hover;
         }
 
+        td.number a {
+          color: $link-hover;
+        }
+
         td [class*='popper'] a {
           color: $N500;
         }
 
-        td.actions > div{
-         display: block;
+        td.actions > div {
+          display: block;
         }
       }
 
@@ -161,6 +133,38 @@
         td {
           //border-bottom: none;
         }
+      }
+    }
+
+    &-thead > tr > th {
+      position: relative;
+      padding: 10px 5px;
+      line-height: 12px;
+      font-weight: normal;
+      font-size: 12px;
+      color: $N100;
+      box-shadow: inset 0 -1px 0 0 $N10, inset 0 1px 0 0 $N10;
+      letter-spacing: 0;
+
+      &:first-child {
+        padding-left: 20px;
+      }
+
+      &.actions {
+        text-align: center;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        left: -1px;
+        top: 8px;
+        bottom: 8px;
+        width: 0;
+      }
+
+      label {
+        margin-left: 0 !important;
       }
     }
 
@@ -176,17 +180,45 @@
       a {
         color: $N500;
       }
+
       &:first-child {
-        //padding-left: 0;
-        //border-left: 48px solid #fff;
+        padding-left: 20px;
       }
 
       &:last-child {
-        //border-right: 48px solid #fff;
+        padding-right: 20px;
+        text-align: right;
       }
 
-      &.actions > div {
-        display: none;
+      &.actions {
+        > div {
+          display: none;
+        }
+        button {
+          font-size: 12px;
+          color: $N300;
+          font-weight: normal;
+        }
+      }
+
+      &.number {
+        color: $N100;
+        & > a {
+          color: $N100;
+        }
+      }
+
+      &.fold {
+        font-weight: 500;
+      }
+
+      &.time {
+        color: $N75;
+      }
+
+      &.textCut {
+        @include textCut;
+        max-width: 150px;
       }
     }
 
