refactor: Review table data display

--- a/src/pages/Dashboard/Reviews/Detail/index.scss
+++ b/src/pages/Dashboard/Reviews/Detail/index.scss
@@ -196,6 +196,8 @@
 
   .operator {
     @include note-font;
+    word-break: break-all;
+    word-wrap: break-word;
 
     .name {
       color: $N500;
